added comments to merger functions

--- a/acs_merge_police.ipynb
+++ b/acs_merge_police.ipynb
@@ -49,8 +49,11 @@
     "       'pop_asian_census_tract', 'pop_pacific_islander_census_tract',\n",
     "       'pop_other_multiple_census_tract', 'pop_hispanic_census_tract',\n",
     "       'lat_long', 'month', 'day', 'year']]\n",
+    "    # renaming GEOIDFQ to GEO_ID so we can merge with ACS later\n",
     "    geo_joined_df.rename(columns={'GEOIDFQ':'GEO_ID'})\n",
+    "    # correcting year column to dtype int64\n",
     "    geo_joined_df['year'] = geo_joined_df['year'].astype(int)\n",
+    "    # correcting zip column to dtype int64\n",
     "    geo_joined_df['zip'] = geo_joined_df.apply(\n",
     "    lambda x: int(x.zip.strip()), axis=1)\n",
     "    \n",
@@ -76,12 +79,17 @@
     "        merged_df: a GeoPandas DataFrame containing census demographic data and police homicides in that year in the state\n",
     "    '''\n",
     "    df = pd.read_csv(census_file_path)\n",
+    "    # dropping row index zero because it contains column name information and not data\n",
     "    df = df.drop(index=0, axis=0)\n",
+    "\n",
+    "    # converting all possible columns to float for later regression/classification analysis\n",
     "    for col in df.columns:\n",
     "        try:\n",
     "            df[col] = df[col].astype(float)\n",
     "        except:\n",
     "            continue\n",
+    "\n",
+    "    # performing merge on the 'GEO_ID' column with the sjoined tract polygon/homicide df\n",
     "    merged_df = pd.merge(geo_df[geo_df['year']==year], df, how='left', on='GEO_ID')\n",
     "    return merged_df\n"
    ]
