updating attr_merger func

--- a/acs_merge_police.ipynb
+++ b/acs_merge_police.ipynb
@@ -63,20 +63,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def booleaner(obj, list_like):\n",
+    "    ''' \n",
+    "    returns 1 if obj is found in list_like, else returns zero\n",
+    "    obj: (anything)\n",
+    "    list_like: (listlike)\n",
+    "    '''\n",
+    "    if obj in list_like:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def attr_merger(geo_df, census_file_path, year):\n",
+    "def attr_merger(geo_joined_df, census_file_path):\n",
     "    ''' \n",
     "    takes a geo_df, census_file_path, and year and merges them all together\n",
-    "    geo_df: (GeoPandasDataFrame) a sjoin of a state's .shp shapefile and the original police homicide csv\n",
+    "    geo_joined_df: (GeoPandasDataFrame) a sjoin of a state's .shp shapefile and the original police homicide csv\n",
     "        has column 'GEOIDFQ' renamed to 'GEO_ID' for merging;\n",
-    "    census_file_path: file path for census tract demographic information, should be csv\n",
-    "    year: (int) the year in question for the census_file_path\n",
-    "\n",
+    "    census_file_path: file path for census tract demographic information, should be csv, year = 2013\n",
+    "    \n",
     "    returns:\n",
-    "        merged_df: a GeoPandas DataFrame containing census demographic data and police homicides in that year in the state\n",
+    "        df: a pd DataFrame containing census demographic data and a column that contains boolean val for pol homicide\n",
     "    '''\n",
     "    df = pd.read_csv(census_file_path)\n",
     "    # dropping row index zero because it contains column name information and not data\n",
@@ -88,10 +105,14 @@
     "            df[col] = df[col].astype(float)\n",
     "        except:\n",
     "            continue\n",
+    "        \n",
+    "\tdf['target'] = df.apply(\n",
+    "\t\tlambda x: booleaner(x['GEO_ID'], geo_joined_df['GEO_ID']),\n",
+    "        axis=1\n",
+    "\t)\n",
     "\n",
     "    # performing merge on the 'GEO_ID' column with the sjoined tract polygon/homicide df\n",
-    "    merged_df = pd.merge(geo_df[geo_df['year']==year], df, how='left', on='GEO_ID')\n",
-    "    return merged_df\n"
+    "    return df\n"
    ]
   }
  ],
