updating attr_merger func

--- a/acs_merge_police.ipynb
+++ b/acs_merge_police.ipynb
@@ -11,7 +11,9 @@
     "import numpy as np\n",
     "from preprocess import clean_police_dataset\n",
     "import shapely\n",
-    "from shapely.geometry import point"
+    "from shapely.geometry import point\n",
+    "\n",
+    "# Anita Sun"
    ]
   },
   {
