--- a/acs_merge_police.ipynb
+++ b/acs_merge_police.ipynb
@@ -84,12 +84,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def attr_merger(geo_joined_df, census_file_path):\n",
+    "def attr_merger(geo_joined_df, census_file_path, county):\n",
     "    ''' \n",
     "    takes a geo_df, census_file_path, and year and merges them all together\n",
     "    geo_joined_df: (GeoPandasDataFrame) a sjoin of a state's .shp shapefile and the original police homicide csv\n",
     "        has column 'GEOIDFQ' renamed to 'GEO_ID' for merging;\n",
     "    census_file_path: file path for census tract demographic information, should be csv, year = 2013\n",
+    "    county: (str) county in question\n",
     "    \n",
     "    returns:\n",
     "        df: a pd DataFrame containing census demographic data and a column that contains boolean val for pol homicide\n",
@@ -105,7 +106,10 @@
     "        except:\n",
     "            continue\n",
     "        \n",
-    "\tdf['target'] = df.apply(\n",
+    "    df['in_county'] = df.NAME.str.extract(r'\\s*([\\w\\s]+ County)', expand=False)\n",
+    "    df = df[df['in_county'] == county]\n",
+    "        \n",
+    "    df['target'] = df.apply(\n",
     "\t\tlambda x: booleaner(x['GEO_ID'], geo_joined_df['GEO_ID'].values),\n",
     "        axis=1\n",
     "\t)\n",
