--- a/acs_merge_police.ipynb
+++ b/acs_merge_police.ipynb
@@ -281,71 +281,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "target\n",
-       "0    2048\n",
-       "1     119\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_ny['target'].value_counts()"
+    "colname_dic = {\"S1501_C01_014E\": \"highschool degree over higher rate\", \n",
+    "               \"S1903_C02_001E\": \"household median income\", \n",
+    "               \"S1903_C02_002E\": \"white household median income\",\n",
+    "               \"S1903_C02_003E\": \"black household median income\",\n",
+    "               \"DP05_0032PE\": \"white race rate\"\n",
+    "               \"DP05_0033PE\" \"black race rate\"\n",
+    "               }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "target\n",
-       "0    1944\n",
-       "1     402\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_25604/3691067691.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_ny.replace(to_replace = {'250,000+': '250000', '2,500-': '2500', '-': np.nan}, inplace=True)\n",
+      "/tmp/ipykernel_25604/3691067691.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_il.replace(to_replace = {'250,000+': '250000', '2,500-': '2500', '-': np.nan}, inplace=True)\n",
+      "/tmp/ipykernel_25604/3691067691.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_ca.replace(to_replace = {'250,000+': '250000', '2,500-': '2500', '-': np.nan}, inplace=True)\n"
+     ]
     }
    ],
    "source": [
-    "df_ca['target'].value_counts()"
+    "df_ny = df_ny[[\"S1501_C01_014E\", \"S1903_C02_001E\", \"S1903_C02_002E\", \"S1903_C02_003E\", \"DP05_0032PE\", \"DP05_0033PE\", \"target\"]]\n",
+    "df_ny.replace(to_replace = {'250,000+': '250000', '2,500-': '2500', '-': np.nan}, inplace=True)\n",
+    "df_il = df_il[[\"S1501_C01_014E\", \"S1903_C02_001E\", \"S1903_C02_002E\", \"S1903_C02_003E\", \"DP05_0032PE\", \"DP05_0033PE\", \"target\"]]\n",
+    "df_il.replace(to_replace = {'250,000+': '250000', '2,500-': '2500', '-': np.nan}, inplace=True)\n",
+    "df_ca = df_ca[[\"S1501_C01_014E\", \"S1903_C02_001E\", \"S1903_C02_002E\", \"S1903_C02_003E\", \"DP05_0032PE\", \"DP05_0033PE\", \"target\"]]\n",
+    "df_ca.replace(to_replace = {'250,000+': '250000', '2,500-': '2500', '-': np.nan}, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "target\n",
-       "0    1185\n",
-       "1     134\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Desc for New York \n",
+      "\n",
+      "highschool degree over higher rate \n",
+      " count      2127\n",
+      "unique      495\n",
+      "top       100.0\n",
+      "freq         17\n",
+      "Name: S1501_C01_014E, dtype: object\n",
+      "\n",
+      "\n",
+      "household median income \n",
+      " count      2109\n",
+      "unique     2016\n",
+      "top       63750\n",
+      "freq          4\n",
+      "Name: S1903_C02_001E, dtype: object\n",
+      "\n",
+      "\n",
+      "white household median income \n",
+      " count      1993\n",
+      "unique     1840\n",
+      "top       61250\n",
+      "freq          6\n",
+      "Name: S1903_C02_002E, dtype: object\n",
+      "\n",
+      "\n",
+      "black household median income \n",
+      " count      1464\n",
+      "unique     1372\n",
+      "top       81250\n",
+      "freq          5\n",
+      "Name: S1903_C02_003E, dtype: object\n",
+      "\n",
+      "\n",
+      "white race rateDP05_0033PEblack race rate \n",
+      " count     2127\n",
+      "unique     863\n",
+      "top          0\n",
+      "freq        16\n",
+      "Name: DP05_0032PE, dtype: object\n",
+      "\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "df_il['target'].value_counts()"
+    "print(f'Desc for New York', '\\n')\n",
+    "for col in colname_dic.keys():\n",
+    "        print(colname_dic[col],'\\n',df_ny[col].describe())\n",
+    "        print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'Desc for California', '\\n')\n",
+    "for col in colname_dic.keys():\n",
+    "        print(colname_dic[col],'\\n',df_ca[col].describe())\n",
+    "        print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Desc for Illinois \n",
+      "\n",
+      "highschool degree over higher rate \n",
+      " count     1315\n",
+      "unique     418\n",
+      "top       90.1\n",
+      "freq        12\n",
+      "Name: S1501_C01_014E, dtype: object\n",
+      "\n",
+      "\n",
+      "household median income \n",
+      " count      1315\n",
+      "unique     1268\n",
+      "top       55000\n",
+      "freq          5\n",
+      "Name: S1903_C02_001E, dtype: object\n",
+      "\n",
+      "\n",
+      "white household median income \n",
+      " count      1134\n",
+      "unique     1082\n",
+      "top       58750\n",
+      "freq          4\n",
+      "Name: S1903_C02_002E, dtype: object\n",
+      "\n",
+      "\n",
+      "black household median income \n",
+      " count      869\n",
+      "unique     835\n",
+      "top       2500\n",
+      "freq         5\n",
+      "Name: S1903_C02_003E, dtype: object\n",
+      "\n",
+      "\n",
+      "white race rateDP05_0033PEblack race rate \n",
+      " count     1315\n",
+      "unique     644\n",
+      "top        0.0\n",
+      "freq        33\n",
+      "Name: DP05_0032PE, dtype: object\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Desc for Illinois', '\\n')\n",
+    "for col in colname_dic.keys():\n",
+    "        print(colname_dic[col],'\\n',df_il[col].describe())\n",
+    "        print('\\n')"
    ]
   }
  ],
