add EDA and viz

--- a/acs_merge_police.ipynb
+++ b/acs_merge_police.ipynb
@@ -370,14 +370,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Desc for New York \n",
+      "Desc for New York City \n",
       "\n",
       "highschool degree over higher rate \n",
       " count    2127.000000\n",
@@ -455,7 +455,7 @@
     }
    ],
    "source": [
-    "print(f'Desc for New York', '\\n')\n",
+    "print(f'Desc for New York City', '\\n')\n",
     "for col in colname_dic.keys():\n",
     "        print(colname_dic[col],'\\n',df_ny[col].describe())\n",
     "        print('\\n')"
@@ -463,14 +463,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Desc for California \n",
+      "Desc for Los Angeles \n",
       "\n",
       "highschool degree over higher rate \n",
       " count    2328.000000\n",
@@ -520,7 +520,7 @@
       "Name: S1903_C02_003E, dtype: float64\n",
       "\n",
       "\n",
-      "white race rateDP05_0033PEblack race rate \n",
+      "white race rate \n",
       " count    2329.000000\n",
       "mean       53.617604\n",
       "std        21.143933\n",
@@ -531,12 +531,24 @@
       "max       100.000000\n",
       "Name: DP05_0032PE, dtype: float64\n",
       "\n",
+      "\n",
+      "black race rate \n",
+      " count    2329.000000\n",
+      "mean        8.348304\n",
+      "std        13.346461\n",
+      "min         0.000000\n",
+      "25%         1.100000\n",
+      "50%         3.600000\n",
+      "75%         9.200000\n",
+      "max        88.500000\n",
+      "Name: DP05_0033PE, dtype: float64\n",
+      "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print(f'Desc for California', '\\n')\n",
+    "print(f'Desc for Los Angeles', '\\n')\n",
     "for col in colname_dic.keys():\n",
     "        print(colname_dic[col],'\\n',df_ca[col].describe())\n",
     "        print('\\n')"
@@ -544,14 +556,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Desc for Illinois \n",
+      "Desc for Chicago \n",
       "\n",
       "highschool degree over higher rate \n",
       " count    1315.000000\n",
@@ -601,7 +613,7 @@
       "Name: S1903_C02_003E, dtype: float64\n",
       "\n",
       "\n",
-      "white race rateDP05_0033PEblack race rate \n",
+      "white race rate \n",
       " count    1315.000000\n",
       "mean       53.228669\n",
       "std        32.695498\n",
@@ -612,12 +624,24 @@
       "max        99.400000\n",
       "Name: DP05_0032PE, dtype: float64\n",
       "\n",
+      "\n",
+      "black race rate \n",
+      " count    1315.000000\n",
+      "mean       29.488137\n",
+      "std        37.566123\n",
+      "min         0.000000\n",
+      "25%         1.700000\n",
+      "50%         6.200000\n",
+      "75%        62.650000\n",
+      "max       100.000000\n",
+      "Name: DP05_0033PE, dtype: float64\n",
+      "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print(f'Desc for Illinois', '\\n')\n",
+    "print(f'Desc for Chicago', '\\n')\n",
     "for col in colname_dic.keys():\n",
     "        print(colname_dic[col],'\\n',df_il[col].describe())\n",
     "        print('\\n')"
