Clarify authorship in preprocessing

--- a/preprocessing-notebook.ipynb
+++ b/preprocessing-notebook.ipynb
@@ -7,9 +7,10 @@
     "## Preprocessing & City/Neighborhood Encoding\n",
     "Version 1.5\n",
     "\n",
-    "Anita Sun - nitomanto\n",
+    "Felix Chen - flora-concise\n",
+    "* Felix wrote the vast majority of the code except the first two lines, i.e., the importation.\n",
     "\n",
-    "Felix Chen - flora-concise"
+    "The notebook version of the `preprocess.py` file"
    ]
   },
   {
