final version of logistic regression

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -698,7 +698,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we use 'recall' as the metric for refitting in grid search, the best model has a high score under 'recall'. In other words, the model does a good job in predicting true positives among actual positives or incidents of policde homicide."
+    "As we use 'recall' as the metric for refitting in grid search, the best model has a high score for '1' under 'recall'. In other words, the model does a good job in predicting true positives/actual positives, or real incidents of policde homicide."
    ]
   },
   {
@@ -788,6 +788,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Among all coefficients, percentage of black population is the most predicative of future police homocides. Percentage of individuals with high school degree or above, and white household median income are also informative to the prediction. It appears that race matters, while income and education also have some correlation to future homicides in New York City."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1069,
    "metadata": {},
@@ -818,6 +825,13 @@
     "plt.title('Receiver Operating Characteristic (ROC) Curve')\n",
     "plt.legend(loc=\"lower right\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model is somewhat useful in separating the two classes or predicting whether there will be police homicides."
    ]
   },
   {
@@ -1472,6 +1486,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we use 'recall' as the metric for refitting in grid search, the best model has a high score for '1' under 'recall'. In other words, the model does a good job in predicting true positives/actual positives, or real incidents of policde homicide."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1080,
    "metadata": {},
@@ -1558,6 +1579,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Among all coefficients, percentage of black population is the most predicative of future police homocides, while percentage of individuals with high school degree or above is a close second. Percentage of white population has some predicative value. Similar to New York City, it appears that race is rather informative of future homicides in Los Angeles. Education also have some correlation to future homicides."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1081,
    "metadata": {},
@@ -1588,6 +1616,13 @@
     "plt.title('Receiver Operating Characteristic (ROC) Curve')\n",
     "plt.legend(loc=\"lower right\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compared to the model from New York City, the logistic regression for Los Angeles is slightly more effective in separating the two classes or predicting whether there will be police homicides."
    ]
   },
   {
@@ -2242,6 +2277,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we use 'recall' as the metric for refitting in grid search, the best model has a high score for '1' under 'recall'. In other words, the model does a good job in predicting true positives/actual positives, or real incidents of policde homicide."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1092,
    "metadata": {},
@@ -2328,6 +2370,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again, percentage of black population is the most predicative of future police homocides, while percentage of white population is a close second. Across all three cities, race is constantly informative in terms of prediction of homicides. Household median income also has some correlation to future homicides in Chicago."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1093,
    "metadata": {},
@@ -2358,6 +2407,13 @@
     "plt.title('Receiver Operating Characteristic (ROC) Curve')\n",
     "plt.legend(loc=\"lower right\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compared to the model from Los Anegeles, the logistic regression for Chicago seems to be slightly more effective in separating the two classes or predicting whether there will be police homicides."
    ]
   }
  ],
