final version of logistic regression

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "River Wang"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1056,
    "metadata": {},
