--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "# Dating Cleaning and Merging\n",
-    "# Anita Sun"
+    "# Anita Sun\n",
+    "# River Wang"
    ]
   },
   {
