add moename to markdown

--- a/model_build_dt_il.ipynb
+++ b/model_build_dt_il.ipynb
@@ -2773,6 +2773,20 @@
     "y_true = y_test1\n",
     "print(classification_report(y_true, y_pred))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "as expected, the performance of model 2 and model 3 both shows an obvious increase in recall. Model 3 demonstrates a more balanced performance across other measurement compared to Model 2. However, model2 and model3 both performs low in precision for case1. The reason is that to increase recall, the model may sacrifice precision, leaning towards predicting samples as class 1 (resulting in high recall for class 1 but low precision)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "result analysis are included in the model_build_dt_ca"
+   ]
   }
  ],
  "metadata": {
